@@ -3,13 +3,13 @@
     "donate_url": "https://paypal.me/lucchetto",
     "website_url": "https://revengeos.com/",
     "news_url": "https://t.me/RevengeOSNews",
-    "datetime": 1621008021.7949755,
-    "filename": "RevengeOS-4.0-R-OFFICIAL-rosy-20210510-1353.zip",
+    "datetime": 1626582572.2099774,
+    "filename": "RevengeOS-4.1-R-OFFICIAL-rosy-20210716-0839.zip",
     "id": "",
-    "size": "716757298",
-    "url": "https://sourceforge.net/projects/revengeos/files/rosy/RevengeOS-4.0-R-OFFICIAL-rosy-20210510-1353.zip",
+    "size": "759597908",
+    "url": "https://sourceforge.net/projects/revengeos/files/rosy/RevengeOS-4.1-R-OFFICIAL-rosy-20210716-0839.zip",
     "download_new": "https://download.revengeos.com/download/rosy",
     "clean_flash": "no",
-    "version": "4.0",
-    "filehash": "6f85e55a810b899742f7d75b35a0adc5"
+    "version": "4.1",
+    "filehash": "7a4f1f791f660e7734632002675cb455"
 }
